# websink

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.sh  notes.txt  response.toml  websink.crt  websink.key
src/: command.rs  environment.rs  handles.rs  main.rs  response.rs  responsefile.rs  router.rs
