[package]
name = "websink"
version = "3.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.1"
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
# security
hashbrown = "0.15.2"
rustls = "0.23.25"
